- adding middleware - generating jwt token
