# middlewares/auth.go
@@ -1,0 +1,25 @@
+package middlewares
+
+import (
+	"net/http"
+
+	"example.com/rest-api/utils"
+	"github.com/gin-gonic/gin"
+)
+
+func Authenticate(context *gin.Context) {
+	token := context.Request.Header.Get("Authorization")
+	if token == "" {
+		context.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"message": "Authorization token is required."})
+		return
+	}
+
+	userId, err := utils.VerifyToken(token)
+
+	if err != nil {
+		context.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"message": "Invalid token."})
+		return
+	}
+	context.Set("userId", userId)
+	context.Next()
+}
