# models/event.go
@@ -12,10 +12,8 @@ type Event struct {
 	Description string    `binding:"required"`
 	Location    string    `binding:"required"`
 	DateTime    time.Time `binding:"required"`
-	UserID      int
+	UserID      int64
 }
-
-var events = []Event{}
 
 func (e *Event) Save() error {
 	query := `
