# routes/user.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 
 	"example.com/rest-api/models"
+	"example.com/rest-api/utils"
 	"github.com/gin-gonic/gin"
 )
 
@@ -36,6 +37,18 @@ func signUp(context *gin.Context) {
 	context.JSON(http.StatusCreated, gin.H{"message": "User created successfully!"})
 }
 
+// login godoc
+// @Summary User Login
+// @Description Authenticate a user and return a JWT token upon successful login.
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param  user  body  models.User  true  "User credentials"
+// @Success 200 {object} map[string]interface{} "message: Login successful, token: <JWT Token>"
+// @Failure 400 {object} map[string]string "message: Could not parse request data"
+// @Failure 401 {object} map[string]string "message: Invalid credentials"
+// @Failure 500 {object} map[string]string "message: Could not generate token"
+// @Router /users/login [post]
 func login(context *gin.Context) {
 	var user models.User
 	err := context.ShouldBindJSON(&user)
@@ -50,6 +63,10 @@ func login(context *gin.Context) {
 		context.JSON(http.StatusUnauthorized, gin.H{"message": "Invalid credentials."})
 		return
 	}
-
-	context.JSON(http.StatusOK, gin.H{"message": "Login successful!"})
+	token, err := utils.GenerateToken(user.Email, user.ID)
+	if err != nil {
+		context.JSON(http.StatusInternalServerError, gin.H{"message": "Could not generate token."})
+		return
+	}
+	context.JSON(http.StatusOK, gin.H{"message": "Login successful!", "token": token})
 }
